Update access permissions in config.php and add missing permission translations in messages.ini

--- a/Translation/en_US/messages.ini
+++ b/Translation/en_US/messages.ini
@@ -12,6 +12,10 @@ mautic.emailthreads.threads.list="Email Threads List"
 mautic.emailthreads.thread.view="View Thread: %subject%"
 mautic.emailthreads.view_public="View Public Thread"
 
+# Permissions
+mautic.emailthreads.permissions.emailthreads="Email Threads"
+mautic.emailthreads.permissions.config="Configuration"
+
 # Thread Properties
 mautic.emailthreads.thread.id="Thread ID"
 mautic.emailthreads.thread.subject="Subject"
