Add configuration option to inject previous messages in email threads
- Introduced a new setting in the configuration to control the injection of previous messages as quotes in emails.
- Updated the EmailSubscriber to utilize this setting when generating email content.
- Enhanced the form and translation files to support the new configuration option.

--- a/Translation/en_US/messages.ini
+++ b/Translation/en_US/messages.ini
@@ -52,6 +52,8 @@ mautic.emailthreads.config.thread_lifetime.tooltip="Number of days after which i
 mautic.emailthreads.config.thread_lifetime.help="Threads older than this many days will be automatically deactivated during cleanup"
 mautic.emailthreads.config.include_unsubscribe="Include Unsubscribe Link"
 mautic.emailthreads.config.include_unsubscribe.tooltip="Include unsubscribe link in thread view"
+mautic.emailthreads.config.inject_previous_messages="Inject Previous Messages"
+mautic.emailthreads.config.inject_previous_messages.tooltip="Include previous messages as quoted content in new emails"
 
 # Maintenance
 mautic.emailthreads.maintenance="Maintenance"
