--- a/install
+++ b/install
@@ -8,7 +8,7 @@ echo "======================================="
 echo ""
 
 # Check if we're in the plugin directory
-if [ ! -f "install_sql_only.php" ]; then
+if [ ! -f "install_simple_sql.php" ]; then
     echo "❌ Error: This script must be run from the EmailThreads plugin directory"
     echo "Please cd into the plugin directory and run: ./install"
     exit 1
@@ -22,7 +22,7 @@ fi
 
 # Run the automated installation
 echo "Running automated installation..."
-php install_sql_only.php
+php install_simple_sql.php
 
 # Check if installation was successful
 if [ $? -eq 0 ]; then
